Use longs instead of ints again