@@ -8,7 +8,7 @@ public final class PrimalityTests {
 	 * @param n - the number to test
 	 * @return true if the number is a prime, false otherwise
 	 */
-	public static boolean isPrime(int n){
+	public static boolean isPrime(Long n){
 
 		return test_tiny_primes(n) && test_divisors(n);
 	}
@@ -19,7 +19,7 @@ public final class PrimalityTests {
 	 * @return true if the number is a prime, false otherwise
 	 */
 	
-	public static boolean test_tiny_primes(int n){
+	public static boolean test_tiny_primes(Long n){
 		if(n%2 == 0 || n%3 == 0|| n%5 == 0 || n%7 == 0 || n < 0){
 			return false;
 		}
@@ -35,12 +35,12 @@ public final class PrimalityTests {
 	 *  - Only check factors up to sqrt(n)
 	 *  - Only check for factors 2, 3, 6k-1 and 6k+1 (integer k)
 	 */
-	public static boolean test_divisors(int n){
+	public static boolean test_divisors(Long n){
 		
 		
-		int square_root_n = (int) Math.sqrt(n)+1;
+		Long square_root_n = new Long((long) Math.ceil(Math.sqrt(n)));
 		
-		for(Long i = new Long(1); (6*i)-1<=square_root_n; i++){
+		for(Long i = Long.valueOf(1); (6*i)-1<=square_root_n; i++){
 			
 			if(n%(6*i - 1) == 0 || n%(6*i + 1) == 0){
 				return false;
